src/test/deca/context/invalid/intermediaire2/elseif/01condition_readint.deca
// Description:
// Test de la condition du else if, que juste readInt ne marche pas.
//
// Resultats:
//  01condition_readint.deca:12:16:
//
// Historique:
//    crée le 10/06/2022
{
    if (3 < 2) {
        print("3 < 2");
    } else if ( readInt() ){
        print("!(3 < 2) && readInt()");
    }
}